--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -89,13 +89,8 @@ body:not(#admin-panel) {
       width: 100%;
       max-width: 460px;
       height: 100%;
-      /*height: 870px;
-      position: absolute;
-      top: 50%;
-      left: 50%;
-      transform: translate(-50%, -50%);
+      box-shadow: 0 8px 25px rgba(0, 0, 0, 0.8);
       border-radius: 30px;
-      border: 1px solid #ccc;*/
 }
 
 header {
